--- a/index.html
+++ b/index.html
@@ -179,15 +179,10 @@ noBtn.addEventListener('click', () => {
 
   if (firstNoClick) {
     yesBtn.style.transform = 'scale(2.3)';
-    yesBtn.textContent = 'Hell yeah 🔥'; // 😏 NEW LINE
+    yesBtn.textContent = 'Hell yeah 🔥';
     firstNoClick = false;
   }
 
-  document.body.style.transform = 'translate(6px,6px)';
-  setTimeout(() => document.body.style.transform = 'translate(0,0)', 120);
-});
-
-  // screen shake
   document.body.style.transform = 'translate(6px,6px)';
   setTimeout(() => document.body.style.transform = 'translate(0,0)', 120);
 });
@@ -208,6 +203,7 @@ yesBtn.addEventListener('click', () => {
   }
 });
 </script>
+
 
 </body>
 </html>
