--- a/index.html
+++ b/index.html
@@ -110,6 +110,26 @@ button {
     opacity: 0;
   }
 }
+  /* CHILLIES */
+.chilli {
+  position: fixed;
+  top: -40px;
+  font-size: 32px;
+  pointer-events: none;
+  animation: fall 6s linear forwards;
+}
+
+@keyframes fall {
+  from {
+    transform: translateY(-50px) rotate(0deg);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(110vh) rotate(720deg);
+    opacity: 0;
+  }
+}
+
 </style>
 </head>
 
